--- a/soundrecorder/src/main/res/values-en/strings.xml
+++ b/soundrecorder/src/main/res/values-en/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <!--English-->
     <string name="default_notification_channel_id">Channel ID</string>
 
     <string name="colorpicker_dialog_title">Choose the color</string>
@@ -115,6 +116,20 @@
 
     <string name="whatsapp_support">WhatsApp Support</string>
     <string name="share_via">Share via</string>
+
+
+    <string name="note_song">Song Notes</string>
+    <string name="choose_color">Choose Color</string>
+    <string name="note_empty">No Notes Yet</string>
+    <string name="enter_note">Enter a Note!</string>
+    <string name="enter_note_title">Enter a Note Title!</string>
+    <string name="play_music_text">Play your favorite musical instrument</string>
+    <string name="play_together">Lets learn musical instruments together</string>
+    <string name="exit_title">Are you sure you want to exit?</string>
+    <string name="mode_32_tuts_audio1">32 Keys Mode Sound 1</string>
+    <string name="mode_32_tuts_audio2">32 Keys Mode Sound 2</string>
+    <string name="mode_basuri">Basuri Mode</string>
+    <string name="mode_8_tuts">8 Keys Mode</string>
 
 
 </resources>
