--- a/soundrecorder/src/main/res/values-de/strings.xml
+++ b/soundrecorder/src/main/res/values-de/strings.xml
@@ -128,5 +128,8 @@
     <string name="mode_basuri">Basuri-Modus</string>
     <string name="mode_8_tuts">8-Tasten-Modus</string>
 
+    <string name="volume">Lautstärke</string>
+
+
 
 </resources>
