--- a/soundrecorder/src/main/res/values-fil/strings.xml
+++ b/soundrecorder/src/main/res/values-fil/strings.xml
@@ -131,6 +131,7 @@
     <string name="mode_basuri">Basuri Mode</string>
     <string name="mode_8_tuts">8 Key Mode</string>
 
+    <string name="volume">Dami</string>
 
 
 </resources>
