--- a/soundrecorder/src/main/res/values-hi/strings.xml
+++ b/soundrecorder/src/main/res/values-hi/strings.xml
@@ -129,5 +129,7 @@
     <string name="mode_basuri">बासुरी मोड</string>
     <string name="mode_8_tuts">8 की मोड</string>
 
+    <string name="volume">ध्वनि</string>
+
 
 </resources>
