--- a/soundrecorder/src/main/res/values-in/strings.xml
+++ b/soundrecorder/src/main/res/values-in/strings.xml
@@ -130,6 +130,8 @@
     <string name="mode_basuri">Mode Basuri</string>
     <string name="mode_8_tuts">Mode 8 Tuts</string>
 
+    <string name="volume">Volume</string>
+
 
 
 </resources>
