--- a/soundrecorder/src/main/res/values-ms/strings.xml
+++ b/soundrecorder/src/main/res/values-ms/strings.xml
@@ -132,6 +132,9 @@
     <string name="mode_basuri">Mod Basuri</string>
     <string name="mode_8_tuts">Mod 8 Kekunci</string>
 
+    <string name="volume">Isipadu</string>
+
+
 
 
 </resources>
