--- a/soundrecorder/src/main/res/values-ru/strings.xml
+++ b/soundrecorder/src/main/res/values-ru/strings.xml
@@ -127,6 +127,8 @@
     <string name="mode_basuri">Режим Басури</string>
     <string name="mode_8_tuts">Режим 8 клавиш</string>
 
+    <string name="volume">Громкость</string>
+
 
 
 
