--- a/soundrecorder/src/main/res/values-vi/strings.xml
+++ b/soundrecorder/src/main/res/values-vi/strings.xml
@@ -128,6 +128,8 @@
     <string name="mode_basuri">Chế độ Basuri</string>
     <string name="mode_8_tuts">Chế độ 8 phím</string>
 
+    <string name="volume">Âm lượng</string>
+
 
 
 </resources>
