--- a/soundrecorder/src/main/res/values/strings.xml
+++ b/soundrecorder/src/main/res/values/strings.xml
@@ -129,6 +129,8 @@
     <string name="mode_basuri">Basuri Mode</string>
     <string name="mode_8_tuts">8 Keys Mode</string>
 
+    <string name="volume">Volume</string>
+
     
 
 
