--- a/soundrecorder/src/main/res/values-es/strings.xml
+++ b/soundrecorder/src/main/res/values-es/strings.xml
@@ -130,6 +130,8 @@
     <string name="mode_basuri">Modo Basuri</string>
     <string name="mode_8_tuts">Modo 8 Teclas</string>
 
+    <string name="volume">Volumen</string>
+
 
 
 </resources>
