--- a/soundrecorder/src/main/res/values-nl/strings.xml
+++ b/soundrecorder/src/main/res/values-nl/strings.xml
@@ -132,5 +132,7 @@
     <string name="mode_basuri">Basuri Modus</string>
     <string name="mode_8_tuts">8 Toetsen Modus</string>
 
+    <string name="volume">Volume</string>
+
 
 </resources>
