--- a/soundrecorder/src/main/res/values-de/strings.xml
+++ b/soundrecorder/src/main/res/values-de/strings.xml
@@ -129,6 +129,7 @@
     <string name="mode_8_tuts">8-Tasten-Modus</string>
 
     <string name="volume">Lautstärke</string>
+    <string name="text_choose_not">Hinweis wird hier angezeigt .... wählen Sie zuerst aus</string>
 
 
 
