--- a/soundrecorder/src/main/res/values-es/strings.xml
+++ b/soundrecorder/src/main/res/values-es/strings.xml
@@ -131,6 +131,8 @@
     <string name="mode_8_tuts">Modo 8 Teclas</string>
 
     <string name="volume">Volumen</string>
+    <string name="text_choose_not">La nota se mostrará aquí .... elige primero</string>
+
 
 
 
