--- a/soundrecorder/src/main/res/values-fil/strings.xml
+++ b/soundrecorder/src/main/res/values-fil/strings.xml
@@ -132,6 +132,7 @@
     <string name="mode_8_tuts">8 Key Mode</string>
 
     <string name="volume">Dami</string>
+    <string name="text_choose_not">Ang tala ay ipapakita dito .... pumili muna</string>
 
 
 </resources>
