--- a/soundrecorder/src/main/res/values-hi/strings.xml
+++ b/soundrecorder/src/main/res/values-hi/strings.xml
@@ -130,6 +130,7 @@
     <string name="mode_8_tuts">8 की मोड</string>
 
     <string name="volume">ध्वनि</string>
+    <string name="text_choose_not">नोट यहाँ दिखेगा .... पहले इसे चुनें</string>
 
 
 </resources>
