--- a/soundrecorder/src/main/res/values-ko/strings.xml
+++ b/soundrecorder/src/main/res/values-ko/strings.xml
@@ -133,6 +133,7 @@
     <string name="mode_8_tuts">8키 모드</string>
 
     <string name="volume">볼륨</string>
+    <string name="text_choose_not">여기에 메모가 표시됩니다 .... 먼저 선택하세요</string>
 
 
 
