--- a/soundrecorder/src/main/res/values-ms/strings.xml
+++ b/soundrecorder/src/main/res/values-ms/strings.xml
@@ -133,6 +133,7 @@
     <string name="mode_8_tuts">Mod 8 Kekunci</string>
 
     <string name="volume">Isipadu</string>
+    <string name="text_choose_not">Nota akan dipaparkan di sini .... pilih dahulu</string>
 
 
 
