--- a/soundrecorder/src/main/res/values-nl/strings.xml
+++ b/soundrecorder/src/main/res/values-nl/strings.xml
@@ -133,6 +133,7 @@
     <string name="mode_8_tuts">8 Toetsen Modus</string>
 
     <string name="volume">Volume</string>
+    <string name="text_choose_not">Opmerking zal hier worden weergegeven .... kies eerst</string>
 
 
 </resources>
