--- a/soundrecorder/src/main/res/values-pt/strings.xml
+++ b/soundrecorder/src/main/res/values-pt/strings.xml
@@ -131,6 +131,7 @@
     <string name="mode_8_tuts">Modo 8 Teclas</string>
 
     <string name="volume">Volume</string>
+    <string name="text_choose_not">A nota será exibida aqui .... escolha primeiro</string>
 
 
 </resources>
