--- a/soundrecorder/src/main/res/values-ru/strings.xml
+++ b/soundrecorder/src/main/res/values-ru/strings.xml
@@ -128,6 +128,7 @@
     <string name="mode_8_tuts">Режим 8 клавиш</string>
 
     <string name="volume">Громкость</string>
+    <string name="text_choose_not">Здесь будет показано примечание .... выберите его сначала</string>
 
 
 
