--- a/soundrecorder/src/main/res/values-th/strings.xml
+++ b/soundrecorder/src/main/res/values-th/strings.xml
@@ -131,6 +131,7 @@
 
 
     <string name="volume">ระดับเสียง</string>
+    <string name="text_choose_not">หมายเหตุจะแสดงที่นี่ .... กรุณาเลือกก่อน</string>
 
 
 
