--- a/soundrecorder/src/main/res/values-vi/strings.xml
+++ b/soundrecorder/src/main/res/values-vi/strings.xml
@@ -129,6 +129,7 @@
     <string name="mode_8_tuts">Chế độ 8 phím</string>
 
     <string name="volume">Âm lượng</string>
+    <string name="text_choose_not">Ghi chú sẽ hiển thị ở đây .... vui lòng chọn trước</string>
 
 
 
