--- a/soundrecorder/src/main/res/values/strings.xml
+++ b/soundrecorder/src/main/res/values/strings.xml
@@ -131,6 +131,7 @@
 
     <string name="volume">Volume</string>
 
+    <string name="text_choose_not">Note will show here .... choose it first</string>
     
 
 
