--- a/soundrecorder/src/main/res/values-zh/strings.xml
+++ b/soundrecorder/src/main/res/values-zh/strings.xml
@@ -129,6 +129,6 @@
     <string name="mode_8_tuts">8键模式</string>
 
     <string name="volume">音量</string>
-
+    <string name="text_choose_not">备注将在这里显示 .... 请先选择</string>
 
 </resources>
