--- a/soundrecorder/src/main/res/values-in/strings.xml
+++ b/soundrecorder/src/main/res/values-in/strings.xml
@@ -118,7 +118,7 @@
     <string name="share_via">Bagikan melalui</string>
 
     <string name="note_song">Catatan Lagu</string>
-    <string name="choose_color">Choose Color</string>
+    <string name="choose_color">Pilih Warna</string>
     <string name="note_empty">Belum ada Catatan</string>
     <string name="enter_note">Masukkan Catatan!</string>
     <string name="enter_note_title">Masukkan Judul Catatan!</string>
